--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,10 @@
     "cross-env": "^7.0.3",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
+    "nodemailer-smtp-pool": "^2.8.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
