--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.18.4",
+    "axios": "^0.25.0",
     "babel-preset-react-app": "^10.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
